Discord Investigation added

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ aml/ds-classification
 azure-quickstart-templates
 MachineLearningNotebooks
 az-deep-batch-score
+Batch-Scoring-Deep-Learning-Models-With-AML
+aml/Microsoft/
